# tensor_math

./: .gitignore  Cargo.toml  README.md
benches/: mod.rs  tensor_benches.rs
benches/math/: contract_mul.rs  corr_conv.rs  det_inv.rs  dot.rs  eigen.rs  f64_c64_ops.rs  fft.rs  fft_internal.rs  hessenberg.rs  householder.rs  mod.rs  row_echelon.rs  sum.rs  transformation_rank.rs
benches/utilities/: bench_utils.rs  clip.rs  concat.rs  constructors.rs  flip.rs  iter.rs  map.rs  mod.rs  pool.rs  reshape_flatten.rs  slice.rs  transpose.rs
examples/: mod.rs  profile_concat_mt.rs
src/: lib.rs
src/benches/: mod.rs
src/benches/utilities/: bench_utils.rs  concat.rs  mod.rs
src/definitions/: errors.rs  matrix.rs  matrix_slice_mut.rs  mod.rs  shape.rs  strides.rs  tensor.rs  tensor_slice_mut.rs  traits.rs  transpose.rs
src/math/: approx_eq.rs  contract_mul.rs  corr_conv.rs  det_inv.rs  eigen.rs  elementwise_ops.rs  f64_c64_ops.rs  fft_ops.rs  gaussian.rs  hessenberg.rs  householder.rs  kronecker.rs  mod.rs  polynomials.rs  row_echelon.rs  sum.rs  transformation_rank.rs
src/tensor/: mod.rs  tensor.rs  tensor_math.rs
src/tests/: mod.rs  tensor_tests.rs  tensor_util_tests.rs  test_helpers.rs
src/tests/definitions/: matrix.rs  matrix_slice_mut.rs  mod.rs  shape.rs  tensor.rs  tensor_slice_mut.rs  transpose.rs
src/tests/math/: contract_mul.rs  corr_conv.rs  det_inv.rs  eigen.rs  elementwise_ops.rs  f64_c64_ops.rs  fft_ops.rs  gaussian.rs  hessenberg.rs  householder.rs  kronecker.rs  mod.rs  noncommutative_mul.rs  polynomials.rs  row_echelon.rs  sum.rs  transformation_rank.rs
src/tests/tensor/: mod.rs  tensor_math.rs  tensor_utils.rs
src/tests/utilities/: internal_functions.rs  (+3 more)
src/utilities/: internal_functions.rs  matrix.rs  mod.rs  tensor.rs
tests/: mod.rs  test_helpers.rs
tests/definitions/: matrix.rs  matrix_slice_mut.rs  shape.rs  tensor.rs  tensor_slice_mut.rs  transpose.rs
tests/math/: contract_mul.rs  corr_conv.rs  det_inv.rs  eigen.rs  elementwise_ops.rs  f64_c64_ops.rs  fft_ops.rs  gaussian.rs  hessenberg.rs  householder.rs  kronecker.rs  noncommutative_mul.rs  polynomials.rs  row_echelon.rs  sum.rs  transformation_rank.rs
tests/utilities/: internal_functions.rs  matrix.rs  mod.rs  tensor.rs
